5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_579.log
== SUBMITION (2019-03-16 23:55:36) 
-- CODE:
print("A UFAM TEM", 2019-1909, "ANOS DE FUNDACAO")
-- EXECUTION TIME:
0.194213
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM TEM 110 ANOS DE FUNDACAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:56:12) 
-- CODE:
print("A UFAM TEM", 2016-1909,"ANOS DE FUNDACAO")
-- EXECUTION TIME:
0.128353
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM TEM 107 ANOS DE FUNDACAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:59:14) 
-- CODE:
 print("a ufam tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.151668
-- ERROR:
  File "/home/codebench/codes/1578/579/main.py", line 1
    print("a ufam tem", 2016-1909,"anos de fundacao")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:59:28) 
-- CODE:
 print("a UFAM tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.159552
-- ERROR:
  File "/home/codebench/codes/1578/579/main.py", line 1
    print("a UFAM tem", 2016-1909,"anos de fundacao")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:00:38) 
-- CODE:
print("a UFAM tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.146603
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
a UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 00:00:47) 
-- CODE:
print("a UFAM tem", 2016-1909,"anos de fundacao")
-- OUTPUT:
a UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:00:52) 
-- CODE:
print("a UFAM tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.12851
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
a UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:13:40) 
-- CODE:
print("a UFAM tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.175934
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
a UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:13:55) 
-- CODE:
print("a UFAM tem", 2016 - 1909,"anos de fundacao")
-- EXECUTION TIME:
0.197087
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
a UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:14:14) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.151838
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:16:42) 
-- CODE:
print("A UFAM tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.196778
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:17:03) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.133486
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:17:30) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.194827
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:17:35) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.133154
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:17:54) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.193356
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
